syntax = "proto3";

option csharp_namespace = "FollowService.Protos.Follow";

package follow;

service Follower{
	rpc FollowSave(FollowRequest) returns(FollowResponse);
}

message FollowRequest {
	int32 userId = 1;
	int32 followTo = 2;
}

message FollowResponse {
	bool success = 1;
}